# leti-term04

./: .gitignore  README.md
ISA/: CMakeLists.txt
OS/: CMakeLists.txt
OS/practice01/: CMakeLists.txt  main  main.cpp  main.sh
OS/practice02/: CMakeLists.txt  compile.sh  main01.cpp  main02.cpp  main03.cpp
OS/practice03/: CMakeLists.txt  main.cpp
OS/practice04/: CMakeLists.txt  compile.sh  main.cpp  prog1.cpp  prog2.cpp
OS/practice05/: CMakeLists.txt  compile.sh  main.cpp
OS/practice06/: CMakeLists.txt  compile.sh  main.cpp
OS/practice07/: CMakeLists.txt  compile.sh  main.cpp
OS/practice08/: CMakeLists.txt  client.cpp  compile.sh  server.cpp
OS/practice09/: CMakeLists.txt  compile.sh  main.cpp  unshare.sh
OS/practice10/: CMakeLists.txt  README.md  compile.sh  main.cpp
