cmake_minimum_required(VERSION 3.26)
project(OS)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(practice01)
add_subdirectory(practice02)
add_subdirectory(practice03)
add_subdirectory(practice04)
add_subdirectory(practice05)
add_subdirectory(practice06)
add_subdirectory(practice07)
add_subdirectory(practice08)
add_subdirectory(practice09)
add_subdirectory(practice10)